Add Conference call UI

--- a/source/client/willi/app/src/main/res/layout/fragment_message.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_message.xml
@@ -7,8 +7,41 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="4dp"
+        android:text="Conference List"
+        android:textSize="36sp"
+        android:textStyle="italic" />
+
+    <ListView
+        android:id="@+id/conference_list"
+        android:layout_width="343dp"
+        android:layout_height="196dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="60dp"></ListView>
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="340dp">
+        <Button
+            android:id="@+id/buttonContactCall"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Call" />
+    </TableRow>
+
+    <TextView
+        android:id="@+id/textViewContactResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="390dp"
+        />
 
 </FrameLayout>
