--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -141,16 +141,16 @@
 
         </TableRow>
 
-        <TableRow>
+        <!--<TableRow>-->
 
-            <Button
-                android:id="@+id/buttonCallSend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_span="2"
-                android:onClick="buttonSendClick"
-                android:text="Send" />
-        </TableRow>
+            <!--<Button-->
+                <!--android:id="@+id/buttonCallSend"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_span="2"-->
+                <!--android:onClick="buttonSendClick"-->
+                <!--android:text="Send" />-->
+        <!--</TableRow>-->
 
         <TableRow>
 
