--- a/source/client/willi/app/src/main/res/layout/fragment_list_layout.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_list_layout.xml
@@ -12,10 +12,10 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="130dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_myplaces" />
+            app:srcCompat="@drawable/user" />
 
         <TableLayout
             android:layout_width="269dp"
@@ -33,7 +33,9 @@
                     android:layout_span="3"/>
 
             </TableRow>
-            <TableRow>
+
+            <TableRow android:layout_height="50dp">
+
                 <TextView
                     android:id="@+id/textEmail"
                     android:layout_width="match_parent"
