--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -153,20 +153,26 @@
         <!--</TableRow>-->
 
         <TableRow>
-
+            <TableRow android:layout_span="2">
             <Button
-                android:id="@+id/buttonPark"
+                android:id="@+id/buttonKim"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="buttonParkClick"
-                android:text="Park" />
-
+                android:onClick="buttonKimClick"
+                android:text="Kim" />
             <Button
                 android:id="@+id/buttonLee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="buttonLeeClick"
                 android:text="Lee" />
+            <Button
+                android:id="@+id/buttonPark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonParkClick"
+                android:text="Park" />
+            </TableRow>
         </TableRow>
         <TableRow>
 
