--- a/source/client/willi/app/src/main/res/layout/activity_callstate.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_callstate.xml
@@ -17,23 +17,27 @@
 
         <TableRow
             android:gravity="center">
+
             <ImageView
                 android:id="@+id/imageViewState"
-                android:layout_width="500px"
-                android:layout_height="500px"
-                android:layout_span="2"
-                android:layout_centerInParent="true" />
+                android:layout_width="640px"
+                android:layout_height="480px"
+                android:layout_centerInParent="true"
+                android:layout_span="2" />
         </TableRow>
         <TableRow
             android:gravity="center">
-
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="320px"
+                android:layout_height="240px"
+                android:layout_centerInParent="true" />
             <TextView
                 android:id="@+id/textViewSpaceCS1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="#ffffff"
-                android:layout_span="2"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </TableRow>
