--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,25 @@
                 android:textStyle="bold" />
 
         </TableRow>
+        <TableRow>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="IP : "
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/AddName"
+                tools:layout_editor_absoluteY="132dp" />
+            <EditText
+                android:id="@+id/editIPaddr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:ems="10"
+                android:textColor="#000000" />
+        </TableRow>
         <TableRow>
 
             <TextView
