--- a/source/client/willi/app/src/main/res/layout/activity_callstate.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_callstate.xml
@@ -56,19 +56,6 @@
         </TableRow>
         <TableRow
             android:gravity="center">
-
-            <TextView
-                android:id="@+id/textViewSpaceCS2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="#ffffff"
-                android:layout_span="2"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </TableRow>
-        <TableRow
-            android:gravity="center">
             <Button
                 android:id="@+id/buttonAccept"
                 android:layout_width="wrap_content"
@@ -82,6 +69,18 @@
                 android:onClick="buttonRejectClick"
                 android:text="Reject" />
 
+        </TableRow>
+        <TableRow
+            android:gravity="center">
+            <Switch
+                android:id="@+id/switchVideo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Video :"
+                android:checked="true"
+                android:textOff="OFF"
+                android:textColor="#ffffff"
+                android:textOn="ON"/>
         </TableRow>
     </TableLayout>
 </android.support.constraint.ConstraintLayout>
