--- a/source/client/willi/app/src/main/res/layout/activity_forgot_pw.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_forgot_pw.xml
@@ -72,7 +72,7 @@
                 android:text="New Password : " />
             <EditText
                 android:id="@+id/newPassword"
-                android:layout_width="wrap_content"
+                android:layout_width="185dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
         </TableRow>
@@ -87,10 +87,10 @@
 
             <Button
                 android:id="@+id/forgotpassword"
-                android:layout_width="wrap_content"
+                android:layout_width="182dp"
                 android:layout_height="wrap_content"
                 android:onClick="ForgotPassword_Forgot"
-                android:text="Forgot Password"
+                android:text="Save"
                 android:textAllCaps="false" />
         </TableRow>
         <TableRow>
