--- a/source/client/willi/app/src/main/res/layout/activity_my_info.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_my_info.xml
@@ -38,8 +38,8 @@
 
             <TextView
                 android:id="@+id/TextEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
         </TableRow>
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content" />
         </TableRow>
 
-        <TableRow>
+        <TableRow android:layout_width="wrap_content">
 
             <TextView
                 android:id="@+id/textView4"
@@ -73,7 +73,7 @@
                 android:spinnerMode="dropdown" />
         </TableRow>
 
-        <TableRow>
+        <TableRow android:layout_width="wrap_content">
 
             <TextView
                 android:id="@+id/textView5"
@@ -83,12 +83,12 @@
 
             <EditText
                 android:id="@+id/editTextSecurityAnswer"
-                android:layout_width="wrap_content"
+                android:layout_width="136dp"
                 android:layout_height="wrap_content" />
 
         </TableRow>
 
-        <TableRow>
+        <TableRow android:layout_width="wrap_content">
 
             <TextView
                 android:id="@+id/editname"
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content" />
         </TableRow>
 
-        <TableRow>
+        <TableRow android:layout_width="wrap_content">
 
             <Button
                 android:id="@+id/close"
@@ -113,10 +113,10 @@
 
             <Button
                 android:id="@+id/MyInfoSave"
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:onClick="MyInfoSave"
-                android:text="My Information Save"
+                android:text="Save"
                 android:textAllCaps="false" />
         </TableRow>
 
