--- a/source/client/willi/app/src/main/res/layout/fragment_setting.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_setting.xml
@@ -83,9 +83,9 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
-                android:background="#00000000"
+                android:background="?attr/colorButtonNormal"
                 android:onClick="myInfobutton"
-                android:text="View my Information"
+                android:text="Edit my Info."
                 android:textAllCaps="false" />
         </TableRow>
 
