Update my info result

--- a/source/client/willi/app/src/main/res/layout/activity_my_info.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_my_info.xml
@@ -7,8 +7,8 @@
     tools:context=".ui.MyInfoActivity">
 
     <TableLayout
-        android:layout_width="349dp"
-        android:layout_height="262dp"
+        android:layout_width="350dp"
+        android:layout_height="314dp"
         android:layout_margin="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -120,12 +120,24 @@
                 android:textAllCaps="false" />
         </TableRow>
 
-        <TableRow>
+        <TableRow android:layout_height="77dp">
 
             <TextView
                 android:id="@+id/textViewResult"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="46dp"
+                android:layout_span="2" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/result2"
+                android:layout_width="wrap_content"
+                android:layout_height="51dp"
                 android:layout_span="2" />
         </TableRow>
     </TableLayout>
